--- a/style.css
+++ b/style.css
@@ -4,6 +4,17 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+header {
+    background-color: black;
+    padding: 15px;
+    text-align: center;
+    border-radius: 10px;
+}
+
+h1 {
+    color: blueviolet;
+}
+
 body {
     background-color: blueviolet;
 }
@@ -14,4 +25,15 @@ a {
 
 a:hover {
     color: white;
+    
+}
+
+main {
+    margin-top: 10px;
+    background-color: rgb(203, 168, 236);
+    border-radius: 15px;
+    padding: 15px;
+}
+main > p {
+    font-weight: bold;
 }
