--- a/style.css
+++ b/style.css
@@ -1,7 +1,17 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Prosto+One&display=swap');
+
 * {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  
+}
+
+:root {
+    --cor1: #8a2ce2;
+    --cor2: #cba8ec;
+
+    --fonte-destaque: 'Prosto One', cursive;
 }
 
 header {
@@ -12,11 +22,12 @@ header {
 }
 
 h1 {
-    color: blueviolet;
+    color: var(--cor1);
+    font-family: var(--fonte-destaque);
 }
 
 body {
-    background-color: blueviolet;
+    background-color: var(--cor1);
 }
 
 a {
@@ -30,7 +41,7 @@ a:hover {
 
 main {
     margin-top: 10px;
-    background-color: rgb(203, 168, 236);
+    background-color: var(--cor2);
     border-radius: 15px;
     padding: 15px;
 }
